--- a/multiverse/Makefile
+++ b/multiverse/Makefile
@@ -4,6 +4,7 @@ all: popgm simplest
 popgm: 
 	gcc -o x86_populate_gm -m32 -Wall -nostdlib -fno-toplevel-reorder -masm=intel -O1 x86_populate_gm.c
 	gcc -o x64_populate_gm -m64 -Wall -nostdlib -fno-toplevel-reorder -masm=intel -O1 x64_populate_gm.c
+	gcc -o x64_populate_gm_shadow -m64 -Wall -nostdlib -fno-toplevel-reorder -masm=intel -O1 x64_populate_gm.c -DSHADOW_STACK
 	bash parse_popgm.sh
 
 simplest:
